--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -163,7 +163,7 @@ margin-top:6%;
 	
 .createEvent {
 float:left;
-margin-top:-18%;
+margin-top:-10%;
 margin-left: 50%;
 width: 35%;
 border-style:solid;
@@ -247,6 +247,23 @@ top: 12%;
 width: 100%;
 }
 .welcomeHeader p {
+font: italic 1.1em/2.2 georgia; 
+text-align: left;
+}
+
+.menu {
+position:relative;
+margin-top: 2%;
+margin-left: 25%;
+width: 50%;
+border-style:solid;
+border-width:1px;
+padding-right:2%;
+padding-left:2%;
+padding-top:2%;
+padding-bottom:2%;
+}
+.menu p {
 font: italic 1.1em/2.2 georgia; 
 text-align: left;
 }
@@ -518,6 +535,14 @@ background: url('/site_media/img/facebook.png') no-repeat;
 	margin-left:10%;
 	border-style:solid;
 	border-width:1px;
+}
+
+.mapEvent{ 
+	height: 23%; 
+	width: 23%; 
+	position:relative; 
+	margin-top:10%; 
+	margin-left:40%;
 }
 
 .show_hide {
