--- a/food/templates/joinResult.html
+++ b/food/templates/joinResult.html
@@ -8,18 +8,6 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <script type="text/javascript">
-      $(function() {
-        $( ".datepicker" ).datepicker({
-          changeMonth: true,
-          changeYear: true,
-          yearRange: "1900:2012",
-          // You can put more options here.
-
-        });
-      });
-    </script>
 </head>
 <body id="css-zen-garden">
 <div class="page-wrapper">
@@ -34,19 +22,11 @@
     </section>
 </div>
 <div class = "welcomeHeader">
-<h2> Thanks {{ firstname }} {{ lastname }} for joining this Event </h2>
+<h2> {{ firstname }} {{ lastname }} </h2>
 </div>
-<div class ="viewEvent">
-<p> Here are some details for the Event : </p>
-<ul>
-<li>{{ event.title }} - {{event.description}}</li>
-<td>Date and Time of the Event: {{ event.dateOfEvent }}</td><br>
-<td>Created by {{event.chef}}</td><br>
-{% for guest in guests %}
-    <td>Participants: {{guest}}</td><br>
-{% endfor %}
-
-</ul>
+<div class ="notifications">
+<p> A notification requesting approval has been sent to the owner of the event! <p>
+<p> Now you just have to wait for his reply! </p>
 </div>
 </body>
 </html>
