--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -78,7 +78,7 @@
 				{% endif %}
 				<br>
 				<br>
-				<a href="/logout/">Logout</a>
+				<a href="/logout/">Logout</a> | <a href="{% url food.views.viewUserProfile user_id=userId %}">Profile</a>				
 			</div>
 		</header>
 		</div>
