--- a/food/templates/joinResult.html
+++ b/food/templates/joinResult.html
@@ -15,7 +15,8 @@
         <header role="banner">
             <h1></h1>
             <div class="user_panel">
-                <a href="/logout/">Logout</a>
+                <a href="/logout/">Logout</a> | <a href="{% url food.views.viewUserProfile user_id=userId %}">Profile</a> |
+				<a href="/insertview/">Home</a>
             </div>
         </header>
         </div>
